Separate Influx writing to its own file for reuse. Improve bad value handling. Update IPs.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ creds.source
 .DS_Store
 influx-scripts-python/.idea/
 influx-scripts-python/.python-version
+influx-scripts-python/my_credentials.py
+influx-scripts-python/__pycache__
